<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LFDemo</string>
    <string name="action_settings">Set</string>
    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serialport.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
    <string name="TXT_POWER_ON">PowerOn</string>
    <string name="TXT_POWER_OFF">PowerOff</string>
    <string name="TXT_OPEN">Open</string>
    <string name="TXT_CLOSE">Close</string>
    <string name="TXT_RECORD">Reception</string>


</resources>